[package]
name = "signal-x"
version = "1.0.0"
edition = "2021"
authors = ["Yusuf Yilmaz"]
description = "Ag guvenlik denetcisi - TCP port tarama, cihaz kesfi, OS tespiti ve web paneli"
keywords = ["network", "security", "scanner", "pentest", "cybersecurity"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
colored = "2"
chrono = "0.4"
open = "5"
